adding build instructions to readme