@@ -177,3 +177,7 @@ spark-bench = {
 }
 ```
 
+### Same Algorithm, Different Spark Settings
+
+
+SBT_OPTS="-Xmx1536M -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=2G -Xss2M"
